# statcan

./: .gitignore  LICENSE.md  README.md  hello.py  pyproject.toml
src/statcan/: client.py  main.py
