[project]
name = "statcan"
version = "0.1.0"
description = "A StatCAN data wrangler."
readme = "README.md"
license = "LICENSE.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.2"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
cache = [
    "hishel>=0.1.1",
]
pandas = ["pandas"]
polars = ["polars"]

[project.scripts]
statcan = "statcan.main:main"

[dependency-groups]
dev = [
  "pytest"
]
